[package]
name = "linkdrive-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.13.1"
chrono = "0.4"
csv = "1.1"
headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome" }
lettre = "0.10"
rayon = "1.5"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"